# crunch

./: .appveyor.yml  .clang-tidy  .codecov.yml  .gitignore  .lgtm.yml  .travis.yml  CONTRIBUTING.md  Makefile  Makefile.inc  README.md  appveyor.yml  build32.sh  build64.sh  build64Debian.sh  buildmac.sh  meson.bat  meson.build  runClangTidy.py  runCoverageTarget.py
.github/: exportEnv.bat  exportEnv.sh
.github/workflow/: workflow.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  codeql.yml  workflow.yml
.travis-ci/: beforeScript.sh  build.bat  install.sh  installCoverity.sh  meson.bat  script.sh
VS/: .gitignore  crunch.sln  inttypes.h
VS/Debug/: testCrunch.c
VS/Release/: buildTestCrunch++.bat  testCrunch++.cpp
VS/crunch/: crunch.vcxproj  crunch.vcxproj.filters
VS/crunch++/: crunch++.vcxproj
VS/crunchMake/: crunchMake.vcxproj  crunchMake.vcxproj.filters
VS/libcrunch/: libcrunch.vcxproj  libcrunch.vcxproj.filters
VS/libcrunch++/: libcrunch++.vcxproj
crunch/: .gitignore  ArgsParser.c  ArgsParser.h  Core.c  Core.h  Crunch.c  CrunchMake.c  Logger.c  Logger.h  Makefile  Memory.c  Memory.h  StringFuncs.c  StringFuncs.h  crunch.c  crunch.h  crunch.pc.in  crunchMake.c  libTest.h  meson.build  testArgsParser.c  testBad.c  testCrunch.c  testLibTest.c  version.h.in
crunch++/: .gitignore  ArgsParser.cpp  ArgsParser.h  Core.cpp  Core.h  Logger.cpp  Logger.h  Makefile  StringFuncs.cpp  StringFuncs.h  Tester.cpp  argsParser.hxx  core.cxx  core.hxx  crunch++.cpp  crunch++.h  crunch++.pc.in  logger.cxx  logger.hxx  memory.hxx  meson.build  stringFuncs.cxx  stringFuncs.hxx  testArgsParser.cpp  testBad.cpp  testCrunch++.cpp  testLogger.cpp  testRegistration.cpp  testTester.cpp  tester.cxx  version.hxx.in
crunch/threading/: threadShim.c  threadShim.h
crunchMake/: .gitignore  Makefile  compilerUnixlike.cxx  compilerWindows.cxx  crunchCompiler.hxx  crunchMake.cpp  crunchMake.h.in  meson.build  version.hxx.in
docs/: .gitignore  .jekyll-metadata  CNAME  Gemfile  _config.yml  build-and-install.md  crunch++.md  crunch.md  index.md  run-jekyll  test.c  test.cxx
docs/_layouts/: default.html
docs/_sass/: jekyll-theme-midnight.scss
docs/_site/: build-and-install.html  crunch++.html  crunch.html  index.html
docs/_site/assets/css/: style.css
libTest/: .gitignore  ArgsParser.c  ArgsParser.h  Core.c  Core.h  Logger.c  Logger.h  Makefile  Memory.c  Memory.h  StringFuncs.c  StringFuncs.h  Test.c  TestMake.c  libTest.h  libTest.pc.in
man/: crunch++.1  crunch++.1.md  crunch.1  crunch.1.md  crunchMake.1  crunchMake.1.md  meson.build
package/: .gitignore  PKGBUILD  build-deb  build-pkg  build-rpm  crunch.spec
package/debian/: changelog  control  copyright
test/: meson.build
test/crunch/: meson.build  testArgsParser.c  testBad.c  testCrunch.c  testThreadShim.c
test/crunch++/: meson.build  testArgsParser.cpp  testBad.cpp  testCrunch++.cpp  testLogger.cpp  testRegistration.cpp  testTester.cpp
test/crunchMake/: crunchMakeClang.py  crunchMakeGCC.py  dummyTest.cxx  meson.build
test/ranlux/: helpers.cxx  meson.build  ranlux.h  ranlux32.cxx  ranlux64.cxx  testEngines.hxx  testRanlux32.cxx  testRanlux64.cxx
